--- a/PIM3.Desktop/FrmCentroCusto.resx
+++ b/PIM3.Desktop/FrmCentroCusto.resx
@@ -120,9 +120,6 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>152, 17</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnsair.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -144,6 +141,9 @@
         GRAAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>152, 17</value>
+  </metadata>
   <data name="btncalt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -272,6 +272,18 @@
         xw8f1vLswFuYgpCXnUHz/k5VvqChoWElTXnyJuf/wdovOFPXaf65OjMCNpVI+GlBZL0rFbnDi843HF94
         viFiQWTd5fmRdZfmR9RGzA+vDSTSXOaF1y4lMkc5hFX0dNiXKf7b/e9Y+5qamj53bt6cc+/ePTci5ThJ
         O4rARt65dSuE3js31NZOIdD/3B86hLVr97+vKuTUag9kGAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnpesquisar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHUAAAAjCAYAAACq00VWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAE9SURBVHhe7ZrLDoIwEEX9/6/lDeFVcybUBKm6lJnck9yN
+        RBcepjOUPqqqSkqsSGrASGrASGrASGrASGrA/JTa931aliWt65r2fU/iP/Df4wAXwzCkuq6LvshHqV3X
+        2Q9J5P3IXpBbcneRyh0wz7NkOgBHVO971Z6kcnHbtuMrwgs4a5qmLJUKFT6hYi9Scw8Vfpmm6SxVQv2D
+        Q5Zhk8oUJakxoFpNKs8+IgYMTSZVE28sTKqW3liYVBELSQ2IpAZEPTUgJpUtJhGD1yPNOI7HR8I77N+b
+        VLaWtAT7B4ccajCphO0l4Rt2BnH5kkrUW/1CleaX5SepWoZ9gjNenWaPJ6mkbVuboCTXB+9CyUVqDj1W
+        Yu8LbuihpVOFH6US7gAdQrsXWSZTbskZ+SpV8RlJDRhJDRhJDRhJDZcqPQEi5cc3EsVgIAAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <metadata name="dataGridViewTextBoxColumn2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
